# muscript

./: README.md  TODO  \  concrete.py  context.py  environment.py  example.mu  example2.mu  execution.py  expression.py  interpreter.py  lexer.py  modifiers.py  mu_parser.py  parse.py  parser.py  pyproject.toml  scaffold.py  state.py  test.sh  typecheck.py
environment/: __init__.py  adt_lib.py  bridge_lib.py  check.py  control_lib.py  include_lib.py  io_lib.py  list_lib.py  list_std.py  std.py  std_lib.py
examples/: algebraic.mu  class.mu  example.mu  example3.mu  example4.mu  example5.mu  example6.mu  example7.mu  function.mu  includable.mu  include.mu  object.mu  turtle.mu
test/: __init__.py  debug.py  test_integer.py
test/control/: __init__.py
test/control/test_files/: for_each.mu  if.mu  match.mu  only.mu  while.mu
test/decimals/: __init__.py
test/decimals/test_files/: assign.mu  coalesce.mu  const.mu  type.mu  wrong_type.mu
test/functions/: __init__.py
test/functions/test_files/: assign.mu  closure.mu  closure_hidden_mutation.mu  closure_mutation.mu  coalesce.mu  const.mu  deep_nested_closure_mutation.mu  higher_order.mu  nested_object_self.mu  object_self.mu  type.mu  wrong_arg_type.mu  wrong_bind_type.mu  wrong_return_type.mu
test/integers/: __init__.py
test/integers/test_files/: assign.mu  coalesce.mu  const.mu  type.mu
test/lists/: __init__.py
test/lists/test_files/: assign.mu  coalesce.mu  const.mu  type.mu  wrong_type.mu
test/objects/: __init__.py
test/sets/: __init__.py
test/strings/: __init__.py
test/testfiles/: integer.mu
(+17 files in other folders)
