[tool.poetry]
name = "muscript"
version = "0.1.0"
description = "This is a basic scaffold for the MuScript Language"
authors = ["Riley Sutton"]

[tool.poetry.dependencies]
python = "^3.9"
lark = "^0.11.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
